[gd_scene load_steps=13 format=3 uid="uid://11qi1e3xb58u"]

[ext_resource type="Script" path="res://playable_cell_cluster.gd" id="1_0yc8o"]
[ext_resource type="PackedScene" uid="uid://0irp083fvy7v" path="res://cancer_cell_cluster.tscn" id="2_h8kyo"]
[ext_resource type="Script" path="res://ThreatLevel.gd" id="3_1fjrt"]
[ext_resource type="Script" path="res://ThreatLevelCooldown.gd" id="3_21bpp"]
[ext_resource type="Texture2D" uid="uid://bk0nq1hsqnn5r" path="res://sprites/lymphocyte.png" id="3_obfec"]
[ext_resource type="AudioStream" uid="uid://b4flvaln2as1g" path="res://sounds/background_noise.wav" id="3_owkcr"]
[ext_resource type="Script" path="res://Help.gd" id="3_pwehu"]
[ext_resource type="PackedScene" uid="uid://dawsk28a6rcs6" path="res://utils/fps.tscn" id="4_5xils"]
[ext_resource type="Script" path="res://Score.gd" id="7_4hjp6"]
[ext_resource type="FontFile" uid="uid://hnxgeipnqeuo" path="res://fonts/Micro5-Regular.ttf" id="7_rckg4"]
[ext_resource type="Script" path="res://MetastasizeButton.gd" id="10_sccpc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0i2i1"]
size = Vector2(416, 368)

[node name="PlayableCellCluster" type="Node2D"]
script = ExtResource("1_0yc8o")

[node name="Spawned" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="CancerCellCluster" parent="." instance=ExtResource("2_h8kyo")]
unique_name_in_owner = true

[node name="Camera2D" type="Camera2D" parent="."]
unique_name_in_owner = true
zoom = Vector2(3, 3)

[node name="LoadedArea" type="Area2D" parent="Camera2D"]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 13
monitorable = false

[node name="LoadedAreaShape" type="CollisionShape2D" parent="Camera2D/LoadedArea"]
unique_name_in_owner = true
shape = SubResource("RectangleShape2D_0i2i1")

[node name="SpawnExclusionShape" type="CollisionPolygon2D" parent="Camera2D"]
unique_name_in_owner = true
polygon = PackedVector2Array(-176, -152, 176, -152, 176, 152, -176, 152)

[node name="AudioListener2D" type="AudioListener2D" parent="Camera2D"]
current = true

[node name="BackgroundNoise" type="AudioStreamPlayer2D" parent="Camera2D"]
stream = ExtResource("3_owkcr")
volume_db = -10.0
autoplay = true

[node name="ThreatLevelCooldown" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 30.0
one_shot = true
script = ExtResource("3_21bpp")

[node name="Overlay" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="Overlay"]
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10

[node name="ThreatLevel" type="HBoxContainer" parent="Overlay/MarginContainer"]
layout_mode = 2
script = ExtResource("3_1fjrt")

[node name="TextureRect" type="TextureRect" parent="Overlay/MarginContainer/ThreatLevel"]
modulate = Color(1, 1, 1, 0.498039)
layout_mode = 2
texture = ExtResource("3_obfec")
stretch_mode = 5

[node name="TextureRect2" type="TextureRect" parent="Overlay/MarginContainer/ThreatLevel"]
modulate = Color(1, 1, 1, 0.498039)
layout_mode = 2
texture = ExtResource("3_obfec")
stretch_mode = 5

[node name="TextureRect3" type="TextureRect" parent="Overlay/MarginContainer/ThreatLevel"]
modulate = Color(1, 1, 1, 0.498039)
layout_mode = 2
texture = ExtResource("3_obfec")
stretch_mode = 5

[node name="TextureRect4" type="TextureRect" parent="Overlay/MarginContainer/ThreatLevel"]
modulate = Color(1, 1, 1, 0.498039)
layout_mode = 2
texture = ExtResource("3_obfec")
stretch_mode = 5

[node name="TextureRect5" type="TextureRect" parent="Overlay/MarginContainer/ThreatLevel"]
modulate = Color(1, 1, 1, 0.498039)
layout_mode = 2
texture = ExtResource("3_obfec")
stretch_mode = 5

[node name="Score" type="Label" parent="Overlay"]
offset_left = 456.0
offset_top = 8.0
offset_right = 632.0
offset_bottom = 31.0
theme_override_colors/font_outline_color = Color(0.0705882, 0.305882, 0.537255, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("7_rckg4")
theme_override_font_sizes/font_size = 30
text = "1234567"
horizontal_alignment = 2
script = ExtResource("7_4hjp6")

[node name="FPS" parent="Overlay" instance=ExtResource("4_5xils")]
offset_left = 568.0
offset_top = 40.0
offset_right = 632.0
offset_bottom = 64.0
text = "?? FPS"
horizontal_alignment = 2

[node name="MetastasizeUI" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="PanelContainer" type="PanelContainer" parent="MetastasizeUI"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="MetastasizeUI/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MetastasizeUI/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="MetastasizeButton" type="Button" parent="MetastasizeUI/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "[SPACE]  Metastisize"
script = ExtResource("10_sccpc")

[node name="Label" type="Label" parent="MetastasizeUI/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "- 1 cell + 100 points"
horizontal_alignment = 1

[node name="Help" type="CanvasLayer" parent="."]
offset = Vector2(0, 100)
transform = Transform2D(1, 0, 0, 1, 0, 100)
script = ExtResource("3_pwehu")

[node name="PanelContainer" type="PanelContainer" parent="Help"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -237.5
offset_top = -60.0
offset_right = 237.5
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="Help/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Label" type="RichTextLabel" parent="Help/PanelContainer/MarginContainer"]
layout_mode = 2
bbcode_enabled = true
text = "[center][font_size=12]Move your [b]mouse[/b] to control the sarcoma[/font_size]
[b]Eat[/b] red blood cells and [b]avoid[/b] getting eaten by lymphocytes[/center]"
fit_content = true
autowrap_mode = 0

[connection signal="body_exited" from="Camera2D/LoadedArea" to="." method="_on_loaded_area_body_exited"]
[connection signal="timeout" from="ThreatLevelCooldown" to="ThreatLevelCooldown" method="_on_timeout"]
